# walle

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: api_test.rs  echo.rs  schedule.rs  waka.rs
plugins/walle-plugin-roulette/: Cargo.toml
plugins/walle-plugin-roulette/src/: lib.rs
plugins/walle-plugin-wakatime/: Cargo.toml
plugins/walle-plugin-wakatime/src/: data_source.rs  lib.rs  users.rs
src/: bot.rs  config.rs  lib.rs  plugin.rs  pre_handle.rs  rule.rs  scheduler.rs  utils.rs
src/builtin/: echo.rs  extract.rs  matcher.rs  mod.rs  pre_handle.rs  rule.rs
src/caller/: mod.rs
src/ext/: action.rs
src/matcher/: handle.rs  hook.rs  matchers.rs  mod.rs  pre_handle.rs  rule.rs  session.rs
