[package]
name = "walle"
version = "0.1.0"
edition = "2021"
authors = ["Abrahum<307887491@qq.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
scheduler = ["tokio-cron-scheduler"]

[dependencies]
async-trait = "0.1"
tokio = "1.17"
tracing-subscriber = { version = "0.3.9", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing = "0.1"
time = { version = "0.3", features = ["macros"] }
tokio-cron-scheduler = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.3"

[dependencies.walle-core]
# version = "0.5.3"
git = "https://github.com/abrahum/walle-core.git"
features = ["websocket", "app-obc", "http"]

[[example]]
name = "echo"
required-features = ["scheduler"]

[dev-dependencies]
tokio = { version = "1.17", features = ["full"] }
