[package]
name = "walle-plugin-wakatime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walle = { path = "../../" }
tokio = { version = "1.20", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }
